--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "server",
+  "name": "vstudio-betatest",
   "version": "1.0.0",
   "main": "server.js",
   "scripts": {
@@ -12,11 +12,20 @@
   "description": "",
   "dependencies": {
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0",
     "mysql2": "^3.14.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/pavelmarkov2323/vstudio-betatest.git"
+  },
+  "bugs": {
+    "url": "https://github.com/pavelmarkov2323/vstudio-betatest/issues"
+  },
+  "homepage": "https://github.com/pavelmarkov2323/vstudio-betatest#readme"
 }
