Test update servers

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://nikitavaleyevadmin:valeyevbetatest@cluster0.cnufvu3.mongodb.net/
+MONGO_URI=mongodb+srv://nikitavaleyevadmin:valeyevbetatest@cluster0.cnufvu3.mongodb.net/valeyevstudio?retryWrites=true&w=majority
 PORT=3000
