--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.17.0",
     "mongoose": "^8.16.0"
   },
@@ -25,6 +26,5 @@
     "url": "https://github.com/pavelmarkov2323/vstudio-betatest/issues"
   },
   "homepage": "https://github.com/pavelmarkov2323/vstudio-betatest#readme",
-  "devDependencies": {},
   "description": ""
 }
