--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "mongoose": "^8.16.0",
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
-    "nodemailer": "^7.0.3"
+    "nodemailer": "^7.0.3",
+    "transliteration": "^2.3.5"
   },
   "repository": {
     "type": "git",
