--- a/package.json
+++ b/package.json
@@ -24,8 +24,7 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
-    "transliteration": "^2.3.5",
-    "ua-parser-js": "^2.0.4"
+    "transliteration": "^2.3.5"
   },
   "repository": {
     "type": "git",
